--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,7 @@ apply plugin: 'com.android.application'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
-    //compile 'com.android.support:appcompat-v7:19.+'
-    //compile 'com.google.android.gms:play-services:5.2.08'
+    compile 'com.google.android.gms:play-services:5.2.08'
 }
 
 android {
