--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,22 @@ buildscript {
         classpath 'com.android.tools.build:gradle:0.12.+'
     }
 }
+
 apply plugin: 'com.android.application'
+
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile 'com.google.android.gms:play-services:5.2.08'
+    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:0.4.0@aar'){
+        transitive=true
+    }
+    compile ('com.cocoahero.android:geojson:1.0.0@aar'){
+        transitive=true
+    }
 }
 
 android {
